<resources>
    <string name="_120fps">120FPS</string>
    <string name="_144fps">144 FPS</string>
    <string name="_32_bit_game">32 BIT GAME</string>
    <string name="_64_bit_game">64 BIT GAME</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_navigation_textroot_text">Root Access</string>
    <string name="aim_bot_3_0">Aim-bot 3.0</string>
    <string name="aim_trigger_mode">Aim Trigger Mode</string>
    <string name="aimboot">Aimbot</string>
    <string name="aimbot_100m">Aimbot 100M</string>
    <string name="aiming_bullet_speed">Aiming Bullet Speed</string>
    <string name="aiming_distance">Aiming Distance</string>
    <string name="aiming_priority">Aiming Priority</string>
    <string name="aiming_range">Aiming Range</string>
    <string name="aiming_speed">Aiming Speed</string>
    <string name="ammo_bullet">Ammo Bullet</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">V.1.0</string>
    <string name="app_name2">BEN10</string>
    <string name="app_name3">LOADER</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ar_weapons">AR Weapons</string>
    <string name="bag__helmet_and_vest">Bag , Helmet and Vest</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_dialog_layout_btn_cancle_text">no</string>
    <string name="bottom_sheet_dialog_layout_btn_text">ok</string>
    <string name="bottom_sheet_dialog_layout_msg_text">masasge</string>
    <string name="bottom_sheet_dialog_layout_title_text">title</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="bullet_tracking">Bullet Tracking</string>
    <string name="bypass_launch_success">BYPASS LAUNCH SUCCESS</string>
    <string name="cancel">Cancel</string>
    <string name="change_rotatation_screen">Change rotatation screen</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com_facebook_katana">com.facebook.katana</string>
    <string name="com_twitter_android">com.twitter.android</string>
    <string name="confirm">Confirm</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="copy">Copy</string>
    <string name="day">Day</string>
    <string name="default_dialog_title_mlh">提示</string>
    <string name="device">Device</string>
    <string name="disable">Disable</string>
    <string name="enble_hiderec">Want To Enable Hide Recording ?</string>
    <string name="erorserver">Check you connection</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="esp11">Tap In Photo To Activate Esp</string>
    <string name="esp_adjustment_settings">Esp Adjustment Settings</string>
    <string name="esp_aimbot_bulletspeedtext_text">0</string>
    <string name="esp_aimbot_distancetext_text">0</string>
    <string name="esp_aimbot_radioButton2_text">Neck</string>
    <string name="esp_aimbot_radioButton3_text">Chest</string>
    <string name="esp_aimbot_radioButton4_text">Distance Priority</string>
    <string name="esp_aimbot_radioButton5_text">Ads or Firing</string>
    <string name="esp_aimbot_radioButton6_text">Ads Only</string>
    <string name="esp_aimbot_radioButton7_text">Firing Only</string>
    <string name="esp_aimbot_radioButton9_text">Crosshair Priority</string>
    <string name="esp_aimbot_radioButton_text">Head</string>
    <string name="esp_aimbot_rangetext_text">0</string>
    <string name="esp_aimbot_recoiltext_text">0</string>
    <string name="esp_generic_adjustment">ESP Generic adjustment</string>
    <string name="esp_inventory_AC32_text">ACE32</string>
    <string name="esp_inventory_AKM_text">AKM</string>
    <string name="esp_inventory_AMR_text">AMR</string>
    <string name="esp_inventory_ATV_text">ATV1</string>
    <string name="esp_inventory_AUG_text">AUG</string>
    <string name="esp_inventory_AWM_text">AWM</string>
    <string name="esp_inventory_Airdrop_text">AirDrop</string>
    <string name="esp_inventory_AngledGrip_text">Angled Grip</string>
    <string name="esp_inventory_ArCompensator_text">Compensator Ar</string>
    <string name="esp_inventory_BMG50_text">50BMG</string>
    <string name="esp_inventory_BRDM_text">BRDM</string>
    <string name="esp_inventory_Bike_text">Bike</string>
    <string name="esp_inventory_Boat_text">Boat</string>
    <string name="esp_inventory_Buggy_text">Buggy</string>
    <string name="esp_inventory_BulletLoop_text">Bullet Loop</string>
    <string name="esp_inventory_Bus_text">Bus</string>
    <string name="esp_inventory_CheekPad_text">CheekPad</string>
    <string name="esp_inventory_Choke_text">Choke</string>
    <string name="esp_inventory_CompensatorSMG_text">Compensator SMG</string>
    <string name="esp_inventory_CoupeRB_text">CoupeRB</string>
    <string name="esp_inventory_Crate_text">Crate</string>
    <string name="esp_inventory_Crossbow_text">Crossbow</string>
    <string name="esp_inventory_Crowbar_text">Crowbar</string>
    <string name="esp_inventory_DBS_text">DBS</string>
    <string name="esp_inventory_DP28_text">DP28</string>
    <string name="esp_inventory_Dacia_text">Dacia</string>
    <string name="esp_inventory_Desert_text">Dessert Eagle</string>
    <string name="esp_inventory_DropPlane_text">DropPlane</string>
    <string name="esp_inventory_Duckbill_text">Duckbill</string>
    <string name="esp_inventory_ExAr_text">Extended Mag Ar</string>
    <string name="esp_inventory_ExQdAr_text">Extended QD Ar</string>
    <string name="esp_inventory_ExQdSMG_text">Extended QD SMG</string>
    <string name="esp_inventory_ExQdSniper_text">Extended QD Sniper</string>
    <string name="esp_inventory_ExSMG_text">Extended Mag SMG</string>
    <string name="esp_inventory_ExSniper_text">Extended Mag Sniper</string>
    <string name="esp_inventory_Explosive_text">Explosive Bow</string>
    <string name="esp_inventory_FAMAS_text">FAMAS</string>
    <string name="esp_inventory_FlareGun_text">FlareGun</string>
    <string name="esp_inventory_FlashHiderAr_text">Flash Hider Ar</string>
    <string name="esp_inventory_FlashHiderSMG_text">Flash Hider SMG</string>
    <string name="esp_inventory_FlashHiderSniper_text">Flash Hider Sniper</string>
    <string name="esp_inventory_G36C_text">G36C</string>
    <string name="esp_inventory_GasCan_text">Gas Can</string>
    <string name="esp_inventory_Groza_text">Groza</string>
    <string name="esp_inventory_HalfGrip_text">Half Grip</string>
    <string name="esp_inventory_HoneyBadger_text">Honey Badger</string>
    <string name="esp_inventory_Jet_text">Jet</string>
    <string name="esp_inventory_Kar98k_text">Kar98k</string>
    <string name="esp_inventory_LadaNiva_text">LadaNiva</string>
    <string name="esp_inventory_LaserSight_text">Laser Sight</string>
    <string name="esp_inventory_LightGrip_text">Light Grip</string>
    <string name="esp_inventory_M1014_text">M1014</string>
    <string name="esp_inventory_M16A4_text">M16A4</string>
    <string name="esp_inventory_M249_text">M249</string>
    <string name="esp_inventory_M24_text">M24</string>
    <string name="esp_inventory_M762_text">M762</string>
    <string name="esp_inventory_MG3_text">MG3</string>
    <string name="esp_inventory_MK12_text">MK12</string>
    <string name="esp_inventory_MK14_text">MK14</string>
    <string name="esp_inventory_MK47_text">MK47</string>
    <string name="esp_inventory_MP5K_text">MP5K</string>
    <string name="esp_inventory_Machete_text">Machete</string>
    <string name="esp_inventory_Mini14_text">Mini14</string>
    <string name="esp_inventory_Mirado_text">Mirado</string>
    <string name="esp_inventory_MonsterTruck_text">Monster</string>
    <string name="esp_inventory_Mosin_text">Mosin</string>
    <string name="esp_inventory_Motorglider_text">Motor Glider</string>
    <string name="esp_inventory_NS2000_text">NS2000</string>
    <string name="esp_inventory_P18C_text">P18C</string>
    <string name="esp_inventory_P1911_text">P1911</string>
    <string name="esp_inventory_P90_text">P90</string>
    <string name="esp_inventory_P92_text">P92</string>
    <string name="esp_inventory_Pan_text">Pan</string>
    <string name="esp_inventory_QBU_text">QBU</string>
    <string name="esp_inventory_QBZ_text">QBZ</string>
    <string name="esp_inventory_QdAr_text">QuickDraw Mag Ar</string>
    <string name="esp_inventory_QdSMG_text">QuickDraw Mag SMG</string>
    <string name="esp_inventory_QdSniper_text">QuickDraw Mag Sniper</string>
    <string name="esp_inventory_QuiverCrossBow_text">Quiver CrossBow</string>
    <string name="esp_inventory_Rony_text">Rony</string>
    <string name="esp_inventory_Scooter_text">Scooter</string>
    <string name="esp_inventory_Snowbike_text">Snowbike</string>
    <string name="esp_inventory_Snowmobile_text">Snowmobile</string>
    <string name="esp_inventory_Tempo_text">Tempo</string>
    <string name="esp_inventory_Trike_text">Trike</string>
    <string name="esp_inventory_Truck_text">Truck</string>
    <string name="esp_inventory_UAZ_text">UAZ</string>
    <string name="esp_inventory_UTV_text">UTV</string>
</resources>