<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/lyvehicle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
            <TextView android:textSize="15.0sp" android:textStyle="normal" android:textColor="@color/white" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="Vehicles" android:alpha="0.8" android:fontFamily="@font/cof" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/UTV" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_UTV_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/MonsterTruck" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_MonsterTruck_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/BUGGY" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Buggy_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/UAZ" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_UAZ_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/TRIKE" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Trike_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/JET" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Jet_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/CoupeRB" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_CoupeRB_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Motorglider" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Motorglider_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/BIKE" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Bike_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/DACIA" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Dacia_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Boat" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Boat_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Bus" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Bus_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Mirado" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Mirado_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Snowbike" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Snowbike_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Scooter" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Scooter_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Rony" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Rony_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Snowmobile" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Snowmobile_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Tempo" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Tempo_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/Truck" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_Truck_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/LadaNiva" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_LadaNiva_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/BRDM" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_BRDM_text" android:layout_weight="1.0" android:textAlignment="center" android:layout_marginEnd="5.0dip" style="@style/MainFont" />
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/ATV" android:background="@drawable/float_unselect" android:padding="12.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/esp_inventory_ATV_text" android:layout_weight="1.0" android:textAlignment="center" style="@style/MainFont" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>