<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:background="?android:selectableItemBackground" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_margin="8.0dip" android:src="@drawable/notife" android:tint="@color/black" />
            <TextView android:layout_gravity="center_vertical" android:id="@id/title" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bottom_sheet_dialog_layout_title_text" />
        </LinearLayout>
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:background="?android:selectableItemBackground" android:paddingTop="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="8.0dip" android:background="@drawable/prbtn" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="left" android:orientation="vertical" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center_vertical" android:id="@id/msg" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bottom_sheet_dialog_layout_msg_text" />
    </LinearLayout>
    <LinearLayout android:gravity="right" android:layout_gravity="right" android:orientation="horizontal" android:background="?android:selectableItemBackground" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip">
        <Button android:textSize="10.0dip" android:id="@id/btn_cancle" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/bottom_sheet_dialog_layout_btn_cancle_text" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <Button android:textSize="10.0dip" android:id="@id/btn" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="OTHER" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <Button android:textSize="10.0dip" android:id="@id/updateee" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="PROTECTION" style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </LinearLayout>
</LinearLayout>